[gd_scene load_steps=9 format=2]

[ext_resource path="res://spider2.png" type="Texture" id=1]
[ext_resource path="res://spider1.png" type="Texture" id=2]
[ext_resource path="res://Spider.gd" type="Script" id=3]
[ext_resource path="res://ball.tscn" type="PackedScene" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "ball",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "no_ball",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 79.6929, 42.3629 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 29.1855
height = 48.7839

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1920, 1080 )

[node name="Spider" type="KinematicBody2D"]
collision_layer = 24
collision_mask = 24
script = ExtResource( 3 )

[node name="spider_sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "ball"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.52588e-05, -11.3265 )
rotation = 1.57079
shape = SubResource( 3 )

[node name="ball" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 16
collision_mask = 16

[node name="Timer" type="Timer" parent="."]

[node name="animation_timer" type="Timer" parent="."]

[node name="DetectAmonArea2D" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectAmonArea2D"]
shape = SubResource( 4 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="animation_timer" to="." method="_on_animation_timer_timeout"]
[connection signal="body_entered" from="DetectAmonArea2D" to="." method="_on_DetectAmonArea2D_body_entered"]
